Updated style of header

--- a/frontend_base/assets/css/style.css
+++ b/frontend_base/assets/css/style.css
@@ -9,6 +9,7 @@
     border-bottom-style: solid;
     border-left-style: solid;
     border-color: #ffffff;
+    border-radius: 0px 0px 30px 30px
 }
 
 .primary-color {
