--- a/frontend_base/assets/css/style.css
+++ b/frontend_base/assets/css/style.css
@@ -19,6 +19,10 @@
     border-radius: 0px 0px 30px 30px
 }
 
+#go-to-top-button {
+    font-size:35px;
+}
+
 .icon-custom {
     font-size: 1.5rem;
 }
