--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,26 @@
     color: #ffa600;
 }
 
+.info {
+    position: relative;
+    /*To show/hide the info box, this will be toggled*/
+    display: none;
+}
+
+.info > #close-btn {
+    position: absolute;
+    display: block;
+    cursor: pointer;
+    
+    font-size: 2.5em;
+    top: 0;
+    right: 2vw;
+}
+
+.info > #close-btn :hover {
+    color: red;
+}
+
 .border-custom {
     display: inline-block;
     border-color: #ffffff;
@@ -21,9 +41,10 @@
 }
 
 #map {
-    z-index: 5;
-    height: 90vh;
-    width: 100%;
+    z-index: 10;
+    top: 0;
+    height: 85vh;
+    width: 98vw;
 }
 
 #go-to-top-button {
