--- a/assets/css/search.css
+++ b/assets/css/search.css
@@ -4,7 +4,7 @@
     color: #ffa600;
     z-index: 30;
     position: absolute;
-    width: 30vw;
+    max-width: 30vw;
     height: 100%;
     right: -30vw;
     top: 0;
@@ -21,4 +21,7 @@
 
 .bar.active {
     transform: translate(-30vw,0);
+}
+
+.btn {
 }
