--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -2,8 +2,17 @@
 <div id="search-bar" class="bar bg-dark">
     <h1 class="display-4 d-flex justify-content-center"> <strong> <u> Filters </u> </strong> </h1>
 
-    <h3 class="display-6 px-5">Type</h3">
+    <h3 class="display-6 px-5">Type</h3>
+        
     <h3 class="display-6 px-5">Location</h3>
+    <div class="d-flex flex-wrap px-5 mx-5">
+        <button type="button" data-type="LOCATION" data-filter="EUROPE"   class="filterer btn btn-light m-2">Europe   </button>
+        <button type="button" data-type="LOCATION" data-filter="USA"      class="filterer btn btn-light m-2">USA      </button>
+        <button type="button" data-type="LOCATION" data-filter="AMERICAS" class="filterer btn btn-light m-2">Americas </button>
+        <button type="button" data-type="LOCATION" data-filter="ASIA"     class="filterer btn btn-light m-2">Asia     </button>
+        <button type="button" data-type="LOCATION" data-filter="AFRICA"   class="filterer btn btn-light m-2">Africa   </button>
+        <button type="button" data-type="LOCATION" data-filter="OTHER"    class="filterer btn btn-light m-2">Other    </button>
+    </div>
     <h3 class="display-6 px-5">Price</h3>
 </div>
 
