little changes + a few comments

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
             </a>
         </div>
 
-        <div class="col text-center">
+        <div class="col text-center" title="Festivalist | Return to Top" >
             <h1 onclick="topFunction()" id="go-to-top-button" class="border px-3 pb-1 border-top-0 border-5 border-custom bg-dark secondary-color"> Festivalist </h1> 
         </div>  
 
