--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ html, body {
     height: 7vh;/* VERY important for positioning search bar */
     position: sticky;
     margin: auto;
-    color: #ffa600;
+    color: var(--secondary-color);
 }
 
 .header i {
@@ -74,7 +74,7 @@ html, body {
 
 .border-custom {
     display: inline-block;
-    border-color: #ffffff;
+    border-color: var(--tertiary-color);
     border-radius: 0px 0px 30px 30px
 }
 
@@ -106,4 +106,16 @@ html, body {
 
 .tertiary-color {
     color: var(--tertiary-color);
+}
+
+.primary-background-color {
+    background-color: var(--primary-color);
+}
+
+.secondary-background-color {
+    background-color: var(--secondary-color);
+}
+
+.tertiary-background-color {
+    background-color: var(--tertiary-color;
 }
