--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,5 +117,5 @@ html, body {
 }
 
 .tertiary-background-color {
-    background-color: var(--tertiary-color;
+    background-color: var(--tertiary-color);
 }
