--- a/views/partials/info.ejs
+++ b/views/partials/info.ejs
@@ -1,20 +1,23 @@
 <div class="info container secondary-color py-2">
-    <h3 id="festival-name">
-        Festival Title:
-    </h3>
-    <p id="festival-type">
-        Type: genre
-    </p>
-    <p id="festival-location">
-        Location
-    </p>
-    <p id="festival-lineup">
-        Lineup
-    </p>
-    <p id="festival-price">
-        Ticket Price
-    </p>
-    <a onclick="hideInfo()" id="close-btn" >
-        <i class="fas fa-times" ></i>
-    </a>
+    <ul class="list-group">
+        <li class="list-group-item primary-background-color secondary-color" id="festival-name">
+        </li>
+        <li class="list-group-item primary-background-color secondary-color" id="festival-type">
+            Typte: genre
+        </li>
+        <li class="list-group-item primary-background-color secondary-color" id="festival-location">
+            Location:
+        </li>
+        <li class="list-group-item primary-background-color secondary-color" id="festival-lineup">
+            Lineup:
+        </li>
+        <li class="list-group-item primary-background-color secondary-color" id="festival-price">
+            Ticket Price:
+        </li>
+        <li class="list-roup-item" id="festival-price">
+            <a onclick="hideInfo()" id="close-btn">
+                <i class="fas fa-times"></i>
+            </a>
+        </li>
+    </ul>
 </div>
