--- a/views/partials/info.ejs
+++ b/views/partials/info.ejs
@@ -3,7 +3,7 @@
         <li class="list-group-item primary-background-color secondary-color" id="festival-name">
         </li>
         <li class="list-group-item primary-background-color secondary-color" id="festival-type">
-            Typte: genre
+            Type: genre
         </li>
         <li class="list-group-item primary-background-color secondary-color" id="festival-location">
             Location:
