--- a/views/primary.ejs
+++ b/views/primary.ejs
@@ -36,7 +36,7 @@
         <script src="/assets/js/main.js"></script>
 
         <title>Festivalist</title>
-        <link rel="shortcut icon" href="festivalist/assets/img/logo32.png">
+        <link rel="icon" href="/assets/img/logo32.png">
     </head>
     <body class="bg-dark text-white">
         <!-- Helper-holder is to set, width and height which allows the bar to slide in without lots of issues -->
