Changed from database insert to API, Fixed filter buttons so they work

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
         </div>  
 
         <div class="col d-flex flex-row-reverse mt-2">
-            <i title="Search Filters" onclick="slideSearch()" class="fas fa-bars icon-custom search" id="search-activate-btn"></i>
+            <i title="Search Filters" class="fas fa-bars icon-custom search" id="search-activate-btn"></i>
         </div>
     </div>
 </div>
