Added more pins (film festivals), and search filters for film/music, but currently broken, finds (AUB not AnB)

--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -3,7 +3,10 @@
     <h1 class="display-4 d-flex justify-content-center"> <strong> <u> Filters </u> </strong> </h1>
 
     <h3 class="display-6 px-5">Type</h3>
-        
+    <div class="d-flex flex-wrap px-5 mx-5">
+        <button type="button" data-type="TYPE" data-filter="FILM"   class="filterer btn btn-light m-2">Film         </button>
+        <button type="button" data-type="TYPE" data-filter="MUSIC"      class="filterer btn btn-light m-2">Music    </button>
+    </div>
     <h3 class="display-6 px-5">Location</h3>
     <div class="d-flex flex-wrap px-5 mx-5">
         <button type="button" data-type="LOCATION" data-filter="EUROPE"   class="filterer btn btn-light m-2">Europe   </button>
