Added routing, and list view

--- a/views/primary.ejs
+++ b/views/primary.ejs
@@ -17,6 +17,7 @@
 
         <!-- Custom JS -->
         <script src="/assets/js/main.js"></script>
+        <script src="/assets/js/maps.js"></script>
 
         <title>Festivalist</title>
         <link rel="icon" href="/assets/img/logo32.png">
