--- a/views/partials/info.ejs
+++ b/views/partials/info.ejs
@@ -11,9 +11,9 @@
         <li class="list-group-item primary-background-color secondary-color" id="festival-lineup">
             Lineup:
         </li>
-        <li class="list-group-item primary-background-color secondary-color" id="festival-price">
+        <!--<li class="list-group-item primary-background-color secondary-color" id="festival-price">
             Ticket Price:
-        </li>
+        </li>-->
     </ul>
     
     <a onclick="hideInfo()" id="close-btn">
